resuelto el error de toList() a collect(Collector.toList())